# researchProj

./: ADVERSE_RESULTS.md  CHANGES.md  FLAGS.md  NUMBERS_FROZEN.txt  README.md
Anneal/: death_of_a_chimera.tex  death_of_a_chimera_aip.tex  death_of_a_chimera_nld.bib  death_of_a_chimera_nld.tex  death_of_a_chimera_nld_RECONCILED.tex
Augur/: .gitignore  ASSUMPTIONS.md  PROVISIONAL_LEDGER.md  README.md  SUBMISSION_BLOCK.md  SUBMISSION_HOLD  release_config.json  release_gate.py  reproduce.sh  submit.sh  synthesis.md
Caliper/: ASSUMPTIONS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
Caliper/.github/workflows/: ci.yml
Caliper/caliper/: __init__.py  baselines.py  benchmark.py  conformal.py  estimator_maf.py  estimator_reference.py  forward.py  metrics.py  publication.py  repro_gauge.py
Caliper/docs/: api.md  citing.md  fashion_reproduction.md  gauge_reproduction.md  index.md
Caliper/examples/: benchmark_report.py  conformal_demo.py  fashion_repro.py  gauge_repro.py  ruler_demo.py
Caliper/results/: benchmark.csv
Caliper/tests/: test_baselines.py  test_benchmark.py  test_conformal.py  test_estimator_reference.py  test_publication.py  test_repro_gauge.py
Datum/: .gitignore  ASSUMPTIONS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  revalidate.py
Datum/datum/: __init__.py  _paths.py  baselines.py  ci.py  convert.py  manifest.py  osipi_fetch.py  provisional.py  ruler.py  run.py  submit.py  substrate.py  task.py
Datum/docs/: benchmark.md  release.md  ruler-as-standard.md  submitting.md
Datum/examples/: submit_demo.py
Datum/results/: REFERENCE.md  osipi_provenance.json  reference_numbers.csv
Datum/tests/: test_convert.py  test_imports.py  test_manifest.py  test_osipi.py  test_run.py  test_submit.py  test_task.py
Echo/: LETHE.md  README.md  VERIFICATION.md
Fashion/: ADVERSE_RESULTS.md  CHANGES.md  CITATION.cff  FLAGS.md  NUMBERS_FROZEN.txt  README.md
Forge/: .gitignore  README.md  RESULTS_mc_floor.md  RESULTS_mc_floor_fidelity.md  RESULTS_mc_floor_photon.md
Gauge/: .gitignore  POSITIONING.md  README.md  requirements.txt
Gnomon/: .gitignore  ASSUMPTIONS.md  CLEANROOM.md  LICENSE  README.md  RETOOL_HANDOFF.md  TARGETS.md  VERDICT.md  VERIFICATION.md  pyproject.toml  reproduce.sh
Gnomon/docs/: METHODS.md
Gnomon/gnomon/: __init__.py  _paths.py  bayes.py  bootstrap.py  cohort.py  flow.py  forward.py  manifest.py  metrics.py  nlls.py  osipi.py  reframe.py  reproduce.py
Gnomon/handoff/: CLAIMS_LEDGER.md  conditional_coverage.json
Gnomon/results/: reproduction.json
Gnomon/scripts/: build_handoff.py  divergence_diagnostic.py
Gnomon/tests/: conftest.py  test_cp1_scaffold.py  test_cp2_selfconsistency.py  test_cp4_reframe.py
Lattice/: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
Lattice/docs/: CLEANROOM.md  DRO_SPEC.md  POSITIONING.md
Lattice/examples/: continuity_demo.py  evaluate_demo.py  evaluate_with_caliper.py  make_cohort.py
Lattice/lattice/: __init__.py  cohort.py  evaluate.py  generators.py  osipi.py  publication.py  selfcheck.py
Lattice/scripts/: fetch_osipi.py
Lattice/tests/: test_cohort.py  test_continuity.py  test_evaluate.py  test_generators.py  test_publication.py  test_roundtrip.py
Lethe/: .gitignore  ASSUMPTIONS.md  LICENSE  PROMOTION.md  README.md  VERIFICATION.md  pyproject.toml  reproduce.sh
Lethe/echo_repeat/: _paths.py  harness.py  invivo.py  provenance.py  statistic.py
Lethe/paper/: README.md  build.sh  consistency.py  lethe.tex  numbers.tex
Lethe/results/: RESULTS_HARNESS.json  RESULTS_VALIDATION.md  invivo_provenance.json
Lethe/scripts/: fetch_invivo.py  run_harness.py  run_validation.py
Lethe/tests/: test_harness.py  test_statistic.py
Levy/: README.md  reproduce.sh  verify_cp2.py
Limbo/: .gitignore  ASSUMPTIONS.md  CITATIONS.md  ELSEVIER_CLASS_PROVENANCE.md  README.md  SURVEY.md  TAXONOMY.md  build.sh  limbo.bib  (+3 more)
Minos/minos-core/: .gitignore  DESIGN.md  POSITIONING.md  README.md  RESULTS.md  pyproject.toml
Minos/minos-core/experiments/: run_all.py
Minos/minos-core/minos/: __init__.py  config.py  decision.py  diagnostics.py  gate.py  generative.py  seeding.py  utility.py  voi.py
Minos/minos-core/tests/: test_decision.py  test_diagnostics.py  test_gate.py  test_generative.py  test_utility.py  test_voi.py
Sentinel/sentinel-core/: .gitignore  POSITIONING.md  README.md  RESULTS.md  pyproject.toml  reproduce.sh
Sentinel/sentinel-core/experiments/: run_cp0.py
Sentinel/sentinel-core/sentinel/: __init__.py  baselines.py  config.py  course.py  matrix_bridge.py  monitor.py  seeding.py  separation.py  stopping.py
Sentinel/sentinel-core/tests/: conftest.py  test_baselines.py  test_enabler.py  test_separation.py
Sextant/sextant-core/: pyproject.toml
Sextant/sextant-core/sextant/: __init__.py  bootstrap.py  cohorts.py  dicom_io.py  fashion_reuse.py  railing.py  ruler.py  seeding.py  truthsim.py
Sextant/sextant-core/tests/: conftest.py  test_bootstrap.py  test_cohorts.py  test_dicom_io.py  test_fashion_reuse.py  test_railing.py  test_robustness.py  test_ruler.py  test_seeding.py
Vernier/: .gitignore  ASSUMPTIONS.md  LICENSE  PROMOTION.md  README.md  conftest.py  pyproject.toml
Vernier/experiments/: efficiency_frontier.py  feasibility_gate.py  maf_gate.py
Vernier/paper/: build.sh  consistency.py  numbers.tex  refs.bib  vernier.tex
Vernier/results/: efficiency_frontier.json  efficiency_frontier.txt  feasibility_gate.json  feasibility_gate.txt  maf_gate.json  maf_gate.txt
Vernier/tests/: test_crlb.py  test_decision.py  test_feasibility.py  test_gate.py  test_paths.py  test_schemes.py
Vernier/vernier/: __init__.py  _paths.py  crlb.py  decision.py  feasibility.py  gate.py  schemes.py
projLevy/levy-core/: DESIGN_CP0.md  POSITIONING.md  pyproject.toml
projLevy/levy-core/levy/: __init__.py  fisher.py  forward.py  glreuse.py  identifiability.py  noise.py  seeding.py  wall.py
projLevy/levy-core/tests/: conftest.py  test_fisher.py  test_forward.py  test_glreuse.py  test_identifiability.py  test_noise.py  test_wall.py
(+638 files in other folders)
