[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "caliper"
version = "0.1.0"
description = "Caliper -- an IVIM uncertainty-quantification calibration toolkit (model-agnostic calibration ruler + MAF posterior + conformal wrapper)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Caliper project" }]
keywords = ["IVIM", "calibration", "conformal-prediction", "uncertainty-quantification", "normalizing-flows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
estimator = ["torch>=2.0"]
dev = ["pytest>=7", "ruff>=0.4", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/akarlin3/ResearchProj/tree/main/Caliper"
Repository = "https://github.com/akarlin3/ResearchProj"
Issues = "https://github.com/akarlin3/ResearchProj/issues"
Changelog = "https://github.com/akarlin3/ResearchProj/blob/main/Caliper/CHANGELOG.md"

[tool.setuptools]
packages = ["caliper"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]  # allow single-char names (l, q) in math code

[tool.pytest.ini_options]
testpaths = ["tests"]
