[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-repeat"
version = "0.1.0"
description = "Ground-truth-free scale calibration of conformal intervals via test-retest repeatability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["echo_repeat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
