[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minos-core"
version = "0.1.0"
description = "Fashion-independent decision-value of a calibrated error bar (VoC) with a trust-gate (VoTG), fully synthetic."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["minos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
