[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "Regret-targeted decision-stopping vs coverage-targeted stopping (Matrix-twin + Minos-monitor)"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
